# personal_website

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.dev.yaml  compose.prod.yaml  docker-compose.yml
.github/workflows/: cd.yaml  ci.yml
app/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  providers.tsx  tsconfig.json  types.ts
app/admin/: AdminLayout.tsx  types.ts
app/admin/components/: Modal.tsx  Sidebar.tsx
app/admin/pages/: ArticlesPage.tsx  DashboardPage.tsx  ExperiencesPage.tsx  LoginPage.tsx  ProjectsPage.tsx  ResumePage.tsx  StudiesPage.tsx
app/admin/providers/: AdminAuthProvider.tsx
app/api/: admin.ts  articles.ts  experiences.ts  gemini.ts  personalApi.ts  projects.ts  resume.ts  studies.ts  utils.ts
app/app/: globals.css  layout.tsx  not-found.tsx
app/app/(site)/: layout.tsx  loading.tsx  page.tsx  template.tsx
app/app/admin/: layout.tsx  loading.tsx
app/app/data/: events.json
app/app/sitemap.xml/: route.ts
app/components/: theme-provider.tsx
app/components/blog/: ArticleView.tsx  BlogArticleCard.tsx  (+2 more)
app/data/: articles.json  experiences.json  resume.json
app/hooks/: useChat.ts  useChatCompletion.ts
app/layouts/: Layout.tsx
app/lib/: sitemap.ts
app/providers/: ChatProvider.tsx
app/public/: sitemap.xml
backend/: .env.example  Dockerfile  pyproject.toml
backend/datasets/: collection_curriculum_vitae.json  collection_mathis_bio.json
backend/src/ml_backend/: main.py
backend/src/ml_backend/api/: __init__.py  endpoints.py  security.py  session.py
backend/src/ml_backend/api/routes/: __init__.py  admin.py  articles.py  auth.py  chat.py  experiences.py  projects.py  resume.py  sitemap.py  studies.py  ui.py  works.py
backend/src/ml_backend/api/services/: __init__.py  get_classes.py  resume_pdf.py  tools.py
backend/src/ml_backend/databases/: __init__.py  mongo_db_connector.py
backend/src/ml_backend/databases/data/: articles.json  experiences.json  projects.json  resume.json  studies.json
backend/src/ml_backend/prompts/: choose_component.txt  rag_main.txt
backend/src/ml_backend/utils/: __init__.py  ensure_starting.py  file_utils.py  logger.py
development/: docker-compose.yml
frontend/: .env.example  .eslintrc.js  .prettierignore  Dockerfile  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/public/: manifest.json  robots.txt  sitemap.xml
frontend/src/: App.tsx  data.ts  main.tsx  types.ts
src/: next-auth.d.ts  next.config.ts  package-lock.json  package.json  providers.tsx  tsconfig.json  types.ts
src/admin/: types.ts
src/api/: admin.ts  agentClient.ts  analytics.ts  personalApi.ts  resume.ts
src/app/: globals.css  layout.tsx
src/data/: studies.json
src/hooks/: useChat.ts  useChatAgent.ts  useChatCompletion.ts
src/layouts/: Layout.tsx
src/providers/: ChatProvider.tsx
src/public/: robots.txt
src/scripts/: check-api-analytics.mjs
src/types/: agent.ts
(+315 files in other folders)
