[project]
name = "ml_backend"
version = "0.1.0"
description = "Backend web service for Mathis LAMBERT's Personal Website"
requires-python = ">=3.12"
authors = [
    { name = "Mathis LAMBERT", email = "mathislambert.dev@gmail.com" }
]
dependencies = [
    "fastapi[standard]>=0.115.8",
    "motor>=3.7.0",
    "pymongo>=4.3.3",
    "uvicorn>=0.34.0",
    "ml-api-client>=0.3.2",
    "PyJWT>=2.10.1",
    "fpdf2>=2.7.9"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "python-dotenv"
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
lint.select = ["A", "B", "C", "E", "F", "I", "N", "Q", "T", "W"]
lint.ignore = ["A002", "A003", "B008", "E203", "E501", "N801", "E702", "C901"]
exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist"
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
ignore_missing_imports = true
strict = true

[tool.setuptools.package-data]
ml_backend = ["databases/data/*.json", "prompts/*.txt"]
